# employee-attrition-prediction-workforce-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: categorical_cardinality.csv  data_dictionary.csv  employee_attrition_featured_dataset.csv  employee_attrition_modeling_dataset.csv  numeric_range_summary.csv
docs/: recruiter_project_brief.md
models/: employee_attrition_model.joblib
notebooks/: 01_data_quality_and_eda.ipynb  02_feature_engineering.ipynb  03_model_training_and_evaluation.ipynb  04_model_interpretability_and_hr_insights.ipynb  05_r_statistical_workforce_analysis.ipynb
outputs/metrics/: fairness_by_department.csv  fairness_by_gender.csv  fairness_by_jobrole.csv  lift_gain_analysis.csv  model_comparison.csv  permutation_importance.csv  r_all_attrition_group_comparisons.csv  r_categorical_association_tests.csv  r_department_attrition_comparison.csv  r_numeric_attrition_correlations.csv  r_numeric_group_tests.csv  r_overtime_attrition_comparison.csv  r_risk_segment_attrition_comparison.csv  r_satisfaction_attrition_comparison.csv  test_metrics.json  threshold_optimization.csv
r/: attrition_group_comparison.R  workforce_statistical_analysis.R
scripts/: run_pipeline.py
sql/: attrition_analysis.sql  attrition_risk_priority.sql  department_risk_analysis.sql  employee_segment_reporting.sql  workforce_overview.sql
src/: __init__.py  config.py
src/data/: quality.py  (+1 more)
streamlit_app/: app.py  components.py
tests/: test_data_quality.py  test_feature_engineering.py  test_project_outputs.py
(+29 files in other folders)
